Added remainder of HTML content

--- a/index.html
+++ b/index.html
@@ -7,6 +7,23 @@
 <body>
     <h1>Discover hidden places in the world around you</h1>
 
-    <a>Download Excursion (coming soon)</a>
-
+    <a>Download Excursion (coming soon!)</a>
+<p class="video">
+    <video autoplay muted loop>
+        <source src="resources/videos/excursionVIDEO.mp4">
+            Video not supported
+    </video>
+    </p>
+    <h2>Your personal travel guide</h2>
+    <h3>Excursion remembers the places you like, and recommends new points of interest around you</h3>
+    <p class="image">
+        <img src="resources/images/camp.jpg">
+    </p>
+    <p class="icon">
+        <img src="resources/images/phone_icon.png">
+    </p>
+    <a>Download Excursion (coming soon!)</a>
+     <footer>
+         <h4><!--Copyright Symbol-->Excursion</h4>
+     </footer>
 </body>
