CSS added and minor HTML fixes

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <head>
 <title>Excursion</title>
-<link rel="stylesheet" type="tex/css" href="resources/css/style.css">
+<link rel="stylesheet" type="text/css" href="resources/css/style.css">
+<script src="https://kit.fontawesome.com/fc5d642461.js" crossorigin="anonymous"></script>
 
 </head>
 <body>
@@ -22,8 +23,9 @@
     <p class="icon">
         <img src="resources/images/phone_icon.png">
     </p>
+    <h2>Coming soon for iPhone and Android</h2>
     <a>Download Excursion (coming soon!)</a>
      <footer>
-         <h4><!--Copyright Symbol-->Excursion</h4>
+         <h3 class="copyright"><i class="far fa-copyright"></i> Excursion</h3>
      </footer>
 </body>
